# bancwr-diogel

./: .env.example  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-backend.yml  release-frontend.yml  trivy-security.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/.junie/: guidelines.md
backend/data/: bancwr.db
backend/src/: config.rs  db.rs  lib.rs  main.rs  nip46.rs  relay.rs  server.rs  signer.rs  state.rs
backend/tests/endpoints/: http-client.env.json
backend/tests/endpoints/asserts/: should_be_200_ok.js  should_be_400_bad_request.js
backend/tests/endpoints/tests/health/: health_get.http
backend/tests/endpoints/tests/logs/: logs_get.http
backend/tests/endpoints/tests/sign/: sign_post.http
backend/tests/endpoints/tests/status/: status_get.http
backend/tests/integration/: api_test.rs  config_api_test.rs  team_api_test.rs
backend/tests/unit/: config_test.rs  db_test.rs  nip46_test.rs  relay_test.rs  server_test.rs  signer_test.rs
frontend/: Dockerfile  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.junie/: guidelines.md
frontend/app/assets/css/: main.css
frontend/app/components/: ActivityLog.vue  AppHeader.vue  TeamMemberList.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: config.vue  index.vue  logs.vue  team.vue
frontend/server/api/bunker/: [...].ts
frontend/tests/api/: http-client.env.json
frontend/tests/api/tests/bunker/: get-tests.http
frontend/tests/components/: ActivityLog.spec.ts  AppHeader.spec.ts  TeamMemberList.spec.ts
frontend/tests/pages/: config.spec.ts  index.spec.ts  logs.spec.ts  team.spec.ts
